--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,8 @@
     <p>Go to a profile of a candidate, and press 'h' to extract InMail data from a candidate.</p>
     <h3 id="candidate-numbers">Candidates extracted: 0</h3>
     <button id="save-csv">Save as CSV</button>
+    <button id="load-candidates">Load all candidates from page</button>
+    <button id="generate-report">Generate report for week</button>
     <script src="popup.js"></script>
 </body>
 </html>
